# Lab3_arithmetic_stack

./: CMakeLists.txt  README.md
buildlab/: Arithmetic.h  CMakeLists.txt  Exepcion.h  Lexema.h  Operations.h  Queue.h  Stack.h  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.txt  test_lab3.cpp
